// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FilterItem Check snapshots should renders correctly with desktop width 1`] = `
<section
  className="consonant-wrapper"
  onClick={[Function]}
  role="group"
>
  <div
    className="consonant-wrapper--inner"
  >
    <span>
      <div
        className="consonant-left-filters"
        data-testid="consonant-filters__left"
      >
        <div
          className="consonant-left-filters--header"
        >
          <h3
            className="consonant-left-filters--desk-title"
          >
            leftPanel.header
          </h3>
          <button
            className="consonant-left-filters--clear-link"
            data-testid="left-filter-panel-clear-all-btn"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            leftPanel.clearAllFiltersText
          </button>
        </div>
        <div
          className="consonant-search"
          data-testid="filtersSideSearch"
        >
          <label
            htmlFor="consonant-search"
          >
            <span
              className="consonant-search--input-title"
            >
              i18n.leftFilterPanel.searchTitle
            </span>
            <span
              className="consonant-search--input-wrapper"
            >
              <input
                className="consonant-search--input"
                data-testid="search-input"
                id="consonant-search"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="i18n.leftFilterPanel.searchPlaceholderText"
                required={true}
                type="search"
                value=""
              />
              <button
                className="consonant-search--input-clear"
                onClick={[Function]}
                tabIndex="0"
                title="Click to clear search query"
                type="button"
              >
                clear
              </button>
            </span>
          </label>
        </div>
        <button
          className="bookmarks"
          data-testid="bookmarks"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="bookmarks--ico-wrapper"
          >
            <span
              className="bookmarks--ico"
              data-testid="bookmarks--ico"
              style={
                Object {
                  "backgroundImage": "url(http://placehold.it/150x150/red)",
                }
              }
            />
            <span
              className="bookmarks--title"
            >
              i18n.leftFilterPanel.filterTitle
            </span>
          </span>
          <span
            className="bookmarks--item-badge"
            data-testid="bookmarks--item-badge"
          >
            0
          </span>
        </button>
      </div>
    </span>
    <span>
      <aside
        className="consonant-filters-info"
        data-testid="consonant-filters__info"
      >
        <div
          className="consonant-filters-info--wrapper"
        >
          <h2
            className="consonant-filters-info--title"
            data-testid="title"
          >
            i18n.title
          </h2>
          <span
            className="consonant-filters-info--results"
            data-testid="results"
          >
            i18n.totalResultsText {total}
          </span>
        </div>
        <div
          className="consonant-filters-info--search"
        />
        <div
          className="consonant-select"
        >
          <button
            className="consonant-select--btn"
            data-testid="select-button"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            featured
          </button>
          <div
            className="consonant-select--options consonant-select--options_right"
            data-testid="consonant-select--options"
          >
            <button
              className="consonant-select--option consonant-select--option_selected"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              featured
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (A-Z)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (Z-A)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date: (Newest to oldest)
            </button>
          </div>
        </div>
      </aside>
    </span>
  </div>
</section>
`;

exports[`Consonant/FilterItem Check snapshots should renders correctly without featured cards 1`] = `
<section
  className="consonant-wrapper"
  onClick={[Function]}
  role="group"
>
  <div
    className="consonant-wrapper--inner"
  >
    <span>
      <div
        className="consonant-left-filters"
        data-testid="consonant-filters__left"
      >
        <div
          className="consonant-left-filters--header"
        >
          <h3
            className="consonant-left-filters--desk-title"
          >
            leftPanel.header
          </h3>
          <button
            className="consonant-left-filters--clear-link"
            data-testid="left-filter-panel-clear-all-btn"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            leftPanel.clearAllFiltersText
          </button>
        </div>
        <div
          className="consonant-search"
          data-testid="filtersSideSearch"
        >
          <label
            htmlFor="consonant-search"
          >
            <span
              className="consonant-search--input-title"
            >
              i18n.leftFilterPanel.searchTitle
            </span>
            <span
              className="consonant-search--input-wrapper"
            >
              <input
                className="consonant-search--input"
                data-testid="search-input"
                id="consonant-search"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="i18n.leftFilterPanel.searchPlaceholderText"
                required={true}
                type="search"
                value=""
              />
              <button
                className="consonant-search--input-clear"
                onClick={[Function]}
                tabIndex="0"
                title="Click to clear search query"
                type="button"
              >
                clear
              </button>
            </span>
          </label>
        </div>
        <button
          className="bookmarks"
          data-testid="bookmarks"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="bookmarks--ico-wrapper"
          >
            <span
              className="bookmarks--ico"
              data-testid="bookmarks--ico"
              style={
                Object {
                  "backgroundImage": "url(http://placehold.it/150x150/red)",
                }
              }
            />
            <span
              className="bookmarks--title"
            >
              i18n.leftFilterPanel.filterTitle
            </span>
          </span>
          <span
            className="bookmarks--item-badge"
            data-testid="bookmarks--item-badge"
          >
            0
          </span>
        </button>
      </div>
    </span>
    <span>
      <aside
        className="consonant-filters-info"
        data-testid="consonant-filters__info"
      >
        <div
          className="consonant-filters-info--wrapper"
        >
          <h2
            className="consonant-filters-info--title"
            data-testid="title"
          >
            i18n.title
          </h2>
          <span
            className="consonant-filters-info--results"
            data-testid="results"
          >
            i18n.totalResultsText {total}
          </span>
        </div>
        <div
          className="consonant-filters-info--search"
        />
        <div
          className="consonant-select"
        >
          <button
            className="consonant-select--btn"
            data-testid="select-button"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            featured
          </button>
          <div
            className="consonant-select--options consonant-select--options_right"
            data-testid="consonant-select--options"
          >
            <button
              className="consonant-select--option consonant-select--option_selected"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              featured
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (A-Z)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (Z-A)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date: (Newest to oldest)
            </button>
          </div>
        </div>
      </aside>
      <div
        className="consonant-loader consonant-loader_big consonant-loader_absolute"
        data-testid="consonant-loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </span>
  </div>
</section>
`;
